--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="banner">
         <a href="software.html">
-            <img src="images/hard.jpg" alt="Check out our new software tools!">
+            <img src="hard.jpg" alt="Check out our new software tools!">
             <div class="banner-text">
                 <h2>New Data Recovery Tools!</h2>
                 <p>Click here to learn more.</p>
