--- a/services.html
+++ b/services.html
@@ -31,22 +31,22 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="service1.html"><img src="images/ram.jpg" alt="Recycling RAM" width="150"></a></td>
+                    <td><a href="service1.html"><img src="ram.jpg" alt="Recycling RAM" width="150"></a></td>
                     <td>RAM Recycling</td>
                     <td>We recycle and repurpose RAM chips efficiently.</td>
                 </tr>
                 <tr>
-                    <td><a href="service2.html"><img src="images/a.jpg" alt="Hard Drive Recycling" width="150"></a></td>
+                    <td><a href="service2.html"><img src="a.jpg" alt="Hard Drive Recycling" width="150"></a></td>
                     <td>Hard Drive Recycling</td>
                     <td>Secure hard drive destruction and data wiping.</td>
                 </tr>
                 <tr>
-                    <td><a href="service3.html"><img src="images/board.jpg" alt="Motherboard Components Recycling" width="150"></a></td>
+                    <td><a href="service3.html"><img src="board.jpg" alt="Motherboard Components Recycling" width="150"></a></td>
                     <td>Motherboard Components Recycling</td>
                     <td>Recycling of various components from motherboards.</td>
                 </tr>
                 <tr>
-                    <td><a href="service4.html"><img src="images/n.jpg" alt="Data Recovery Services" width="150"></a></td>
+                    <td><a href="service4.html"><img src="n.jpg" alt="Data Recovery Services" width="150"></a></td>
                     <td>Data Recovery Services</td>
                     <td>Professional data recovery from damaged storage devices.</td>
                 </tr>
