--- a/software.html
+++ b/software.html
@@ -46,10 +46,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="software.html">Software</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="software.html">Software</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="stakeholders.html">Stakeholders</a></li>
             </ul>
         </nav>
     </header>
